--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,25 @@
     <title>FileUploadXprs</title>
   </head>
   <body>
+  	<div class="container">
+  	  <h1>FIle Uploading with Express && Multer</h1>
+  	  <form action="/upload" method="POST">
+  	    <div class="fiel-field input-field">
+  	      <div class="btn">
+  	        <span>File</span>
+  	        <input type="file" />
+  	      </div>
+  	      <div class="file-path-wrapper">
+  	        <input class="file-path validate">
+  	      </div>
+  	    </div>
+  	  </form>
 
+
+  	<div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
