--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,14 +12,15 @@
   	  <h1>FIle Uploading with Express && Multer</h1>
   	  <form action="/upload" method="POST">
   	    <div class="fiel-field input-field">
-  	      <div class="btn">
+  	      <div class="btn gray">
   	        <span>File</span>
-  	        <input type="file" />
+  	        <input name="myImage" type="file" />
   	      </div>
   	      <div class="file-path-wrapper">
   	        <input class="file-path validate">
   	      </div>
   	    </div>
+  	    <button type="submit" class="btn"></button>
   	  </form>
 
 
