--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,11 @@
   <body>
   	<div class="container">
   	  <h1>FIle Uploading with Express && Multer</h1>
-  	  <form action="/upload" method="POST">
+
+  	  <!-- EJS -->
+  	  <%= typeof msg !== 'undefined' ? msg : '' %>
+
+  	  <form action="/uploadFile" method="POST" enctype="multipart/form-data">
   	    <div class="fiel-field input-field">
   	      <div class="btn gray">
   	        <span>File</span>
